--- a/HACKATON27NOV/index.html
+++ b/HACKATON27NOV/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hack The Beat</title>
+    <title>Antonio's project</title>
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="style.css">
     <!-- Link to Tone.js library -->
@@ -12,7 +12,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Hack The Beat</h1>
-    <button id="playButton">Play Music</button>
+    <h1>Discover the Mystery Buttons!</h1>
+    <button id="carillonButton" class="carillon">Or, go safe and try this Carillon!</button>
+    <p></p>
+    <div class="instrument-buttons">
+        <button id="instrument_1" class="instrument-btn">KICK</button>
+        <button id="instrument_2" class="instrument-btn">SNARE</button>
+        <button id="instrument_3" class="instrument-btn">PIANO</button>
+        <button id="instrument_4" class="instrument-btn">PIANO</button>
+        <button id="instrument_5" class="instrument-btn">HI-HAT</button>
+        <button id="instrument_6" class="instrument-btn">BASS</button>
+        <button id="instrument_7" class="instrument-btn">PAD</button>
+        <button id="instrument_8" class="instrument-btn">DROPLETS</button>
+        <button id="instrument_9" class="instrument-btn">SWAG</button>
+        <button id="instrument_10" class="instrument-btn">DEATH!</button>
+    </div>
 </body>
 </html>
